demo-app-1/mongo-express-service.yaml
# By default service type is ClusterIP which is internal service type
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer #It could be NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 31001 #nodeport has range between 30000-32767
