demo-app-1/mongo-service.yaml
# By default service type is ClusterIP which is internal service type
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
spec:
  selector:
    app: mongo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
